--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="text-[10px] 2xl:text-[100%]">
 
 <head>
   <meta charset="UTF-8">
-  <title>React JS</title>
+  <title>OneStop - Everything at one place</title>
 </head>
 
 <body>
